# my-song

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: default.yaml
config/models/: embeddings.yaml
notebooks/: 01_embedding_sanity.ipynb  01_embedding_sanity.py
src/acquisition/: __init__.py  base.py  downloader.py  events.py  lastfm.py  manual.py  resolver.py  spotify.py  youtube.py
src/core/: __init__.py  config.py  logging.py  paths.py
src/eval/: __init__.py  holdout.py  listening.py  metrics.py
src/extraction/: __init__.py  analyze.py  audio.py  pipeline.py  segmentation.py
src/extraction/embeddings/: __init__.py  clap.py  mert.py
src/extraction/interpretable/: __init__.py  librosa_extract.py
src/extraction/lyrics/: __init__.py  text_embed.py  whisper_transcribe.py
src/extraction/stems/: __init__.py  demucs_split.py  per_stem.py
src/recommend/: __init__.py  composite.py  rank.py
src/recommend/crawler/: __init__.py  artist_graph.py  sampler.py  tag_graph.py
src/storage/: __init__.py  db.py  schema.py  users.py  vectors.py
src/taste_model/: __init__.py  centroid.py  contrastive.py  engagement.py  manifold.py  trainer.py
src/ui/: __init__.py  cli.py  dashboard.py
tests/: conftest.py  test_audio.py  test_centroid.py  test_composite.py  test_config.py  test_contrastive.py  test_crawler.py  test_downloader.py  test_e2e_smoke.py  test_engagement.py  test_events.py  test_holdout.py  test_librosa.py  test_listening.py  test_manifold.py  test_manual.py  test_metrics.py  test_pipeline.py  test_resolver.py  test_schema.py  test_segmentation.py  test_spotify.py  test_users.py  test_vectors.py
