[project]
name = "music-taste-engine"
version = "0.1.0"
description = "Personal music recommendation system that captures the felt essence of a user's taste."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "spotipy>=2.24",
    "yt-dlp>=2024.12.13",
    "typer>=0.15",
    "structlog>=24.4",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "musicbrainzngs>=0.7.1",
    "pylast>=5.3",
    "python-dotenv>=1.0",
]

# Heavy ML / audio stack — installed on demand for Phase 1+.
#   uv sync --extra extraction      (MERT, CLAP, librosa, FAISS)
#   uv sync --extra deep            (Demucs, Whisper)
#   uv sync --extra ui              (Streamlit dashboard)
# Essentia is intentionally absent — it is fiddly to pip-install; see README.
[project.optional-dependencies]
extraction = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "transformers>=4.44",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pyarrow>=17.0",
    "faiss-cpu>=1.8",
    "umap-learn>=0.5",
]
deep = [
    "demucs>=4.0",
    "openai-whisper>=20240930",
]
ui = [
    "streamlit>=1.39",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "pyright>=1.1.380",
    "pre-commit>=4.0",
]

[project.scripts]
music = "ui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src/ layout: each subdirectory is a top-level importable package
# (e.g. `from acquisition import AudioSource`). See CLAUDE.md module map.
[tool.hatch.build.targets.wheel]
packages = [
    "src/acquisition",
    "src/core",
    "src/eval",
    "src/extraction",
    "src/recommend",
    "src/storage",
    "src/taste_model",
    "src/ui",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "notebooks"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
# spotipy / yt-dlp ship no type stubs; silence the cascade of "unknown type"
# errors that would otherwise drown out real strict-mode findings.
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "e2e: end-to-end test requiring network access and live credentials (deselect with -m 'not e2e')",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/*/__init__.py"]
